Fix bug of Safari with right aligned course teaser section

--- a/css/home.css
+++ b/css/home.css
@@ -391,6 +391,7 @@ ul.course-teasers {
         margin-left: 20px;
     }
     .site-safety .course-category-teaser-content {
+        margin-left: -20px;
         margin-right: 20px;
     }
 }
